tdf#135317 avoid reenterence

Change-Id: I79b6c1c2a2503c49a94f6c7ed74286f53ccebd44
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99821
Tested-by: Jenkins
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>